--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
             <h3>New Transaction</h3>
             <div>
                 <label>
-                    From:
+                    --From:
                     <select id="tx-from">
                         <option value="">(none)</option>
                     </select>
                 </label>
+            </div>
+            <div>
                 <label>
-                    To:
+                    ----To:
                     <select id="tx-to">
                         <option value="">(none)</option>
                     </select>
@@ -73,11 +75,14 @@
             </div>
             <div>
                 <label>
-                    Note:
+                    --Note:
                     <input id="tx-note" type="text" placeholder="Optional">
                 </label>
             </div>
-            <button id="tx-add-btn">Log Transaction</button>
+            <label>
+                -------
+                <button id="tx-add-btn">Log Transaction</button>
+            </label>
         </section>
 
         <section>
