--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div class="summary-row">
                 <span>Total envelopes:---$<span id="sum-envelopes">0.00</span></span>
             </div>
+            <div>
+                <span>Total Allocations:-$<span id="sum-allocations">0.00</span></span>
+            </div>
             <div class="summary-row">
                 <span>Difference:--------$<span id="sum-diff">0.00</span></span>
             </div>
