--- a/index.html
+++ b/index.html
@@ -51,19 +51,15 @@
             <button id="income-btn">Add Income</button>
             <button id="auto-allocate-btn">Auto Allocate</button>
             <div id="core-envelopes-panel" class="core-panel">
-              <div class="core-row">
-                <div class="core-name">Income</div>
-                <div class="core-value">$<span id="income-balance">0.00</span></div>
-              </div>
-              <div class="core-row">
-                <div class="core-name">Overflow</div>
-                <div class="core-value">$<span id="overflow-balance">0.00</span></div>
-              </div>
+                <div class="core-row">
+                  <span class="core-name">Income</span>
+                  <span class="core-value">$<span id="income-balance">0.00</span></span>
+                </div>
+                <div class="core-row">
+                  <span class="core-name">Overflow</span>
+                  <span class="core-value">$<span id="overflow-balance">0.00</span></span>
+                </div>
             </div>
-
-
-
-
         </section>
 
         <section>
